firts version complete

--- a/index.html
+++ b/index.html
@@ -268,6 +268,70 @@
     </main>
 
                  <!-------------------------FOOTER------------------------------>
-    <footer></footer>
+    <footer id="contact">
+<div class="newsletterSocialmedias">
+  <div class="newsletter">
+    <label for="newslettersingup">Sing up to our Newsletter: </label>
+    <input type="text" id="newslettersingup" name="singup" placeholder="enter your e-mail adress"/>
+
+  </div>
+  <div class="socialmedias">
+    <a href=""><img class="icon" src="./images/fb.svg" alt="" /> </a>
+    <a href=""
+      ><img
+        class="icon"
+        src="./images/TWITTER_icon-icons.com_65486.svg"
+        alt=""
+      />
+    </a>
+    <a href=""
+      ><img
+        class="icon"
+        src="./images/instagram_f_icon-icons.com_65485.svg"
+        alt=""
+      />
+    </a>
+  </div>
+
+</div>
+
+<div class="contacts">
+
+<div class="contactType">
+
+  
+    <img src="./images/location.svg" class="contactIcon "alt="">
+
+ 
+  <div class="contactDescription">
+  <p>33, Catstreet</p>
+  <p >18521-898 Catown</p>
+  <p >United States of Cats</p>
+  </div>
+
+
+</div>
+
+<div class="contactType">
+
+  <img src="./images/phone.png" class="contactIcon "alt="">
+  <div class="contactDescription">
+    <p>(66) 3354897-56454</p>
+   
+    </div>
+</div>
+
+<div class="contactType">
+
+  <img src="./images/mail.svg" class="contactIcon "alt="">
+  <div class="contactDescription">
+    <p>contact@catwalk.com</p>
+   
+    </div>
+
+</div>
+</div>
+
+    </footer>
   </body>
 </html>
