--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-------------------------------HEADER----------------------------->
     <header>
       <a href=""
-        ><h1 class="logoName">Catwalk<span>.</span></h1></a
+        ><p class="logoName">Catwalk<span>.</span></p></a
       >
 
       <nav class="navBar1">
